created shorten post api
